src/tests/propInInitialState/invalid/case#6/index.jsx
import {useState} from 'react'

function Avatar(props) {
    const [user, setUser] = useState({...props.user})
    return <View>...</View>
}